build/log/idf_py_stdout_output_137903
[1/11] Performing build step for 'bootloader'
[1/1] cd /media/wish/Disk/esp/camera_example/build/bootloader/esp-idf/esptool_py && /home/wish/.espressif/python_env/idf5.3_py3.12_env/bin/python /media/wish/Disk/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x10000 bootloader 0x0 /media/wish/Disk/esp/camera_example/build/bootloader/bootloader.bin
Bootloader binary size 0x5790 bytes. 0xa870 bytes (66%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/BNN/CMakeFiles/__idf_BNN.dir/Conv2d.c.obj
FAILED: esp-idf/BNN/CMakeFiles/__idf_BNN.dir/Conv2d.c.obj 
/home/wish/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/media/wish/Disk/esp/camera_example/build/config -I/media/wish/Disk/esp/camera_example/components/BNN/include -I/media/wish/Disk/esp/esp-idf/components/newlib/platform_include -I/media/wish/Disk/esp/esp-idf/components/freertos/config/include -I/media/wish/Disk/esp/esp-idf/components/freertos/config/include/freertos -I/media/wish/Disk/esp/esp-idf/components/freertos/config/xtensa/include -I/media/wish/Disk/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/media/wish/Disk/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/media/wish/Disk/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/media/wish/Disk/esp/esp-idf/components/freertos/esp_additions/include -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/include -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/include/soc -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/dma/include -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/ldo/include -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/media/wish/Disk/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/media/wish/Disk/esp/esp-idf/components/heap/include -I/media/wish/Disk/esp/esp-idf/components/log/include -I/media/wish/Disk/esp/esp-idf/components/soc/include -I/media/wish/Disk/esp/esp-idf/components/soc/esp32s3 -I/media/wish/Disk/esp/esp-idf/components/soc/esp32s3/include -I/media/wish/Disk/esp/esp-idf/components/hal/platform_port/include -I/media/wish/Disk/esp/esp-idf/components/hal/esp32s3/include -I/media/wish/Disk/esp/esp-idf/components/hal/include -I/media/wish/Disk/esp/esp-idf/components/esp_rom/include -I/media/wish/Disk/esp/esp-idf/components/esp_rom/include/esp32s3 -I/media/wish/Disk/esp/esp-idf/components/esp_rom/esp32s3 -I/media/wish/Disk/esp/esp-idf/components/esp_common/include -I/media/wish/Disk/esp/esp-idf/components/esp_system/include -I/media/wish/Disk/esp/esp-idf/components/esp_system/port/soc -I/media/wish/Disk/esp/esp-idf/components/esp_system/port/include/private -I/media/wish/Disk/esp/esp-idf/components/xtensa/esp32s3/include -I/media/wish/Disk/esp/esp-idf/components/xtensa/include -I/media/wish/Disk/esp/esp-idf/components/xtensa/deprecated_include -I/media/wish/Disk/esp/esp-idf/components/fatfs/diskio -I/media/wish/Disk/esp/esp-idf/components/fatfs/src -I/media/wish/Disk/esp/esp-idf/components/fatfs/vfs -I/media/wish/Disk/esp/esp-idf/components/wear_levelling/include -I/media/wish/Disk/esp/esp-idf/components/esp_partition/include -I/media/wish/Disk/esp/esp-idf/components/sdmmc/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_sdmmc/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_gpio/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_sdspi/include -I/media/wish/Disk/esp/esp-idf/components/esp_driver_spi/include -I/media/wish/Disk/esp/esp-idf/components/esp_pm/include -I/media/wish/Disk/esp/camera_example/components/sd_card -I/media/wish/Disk/esp/esp-idf/components/esp_adc/include -I/media/wish/Disk/esp/esp-idf/components/esp_adc/interface -I/media/wish/Disk/esp/esp-idf/components/esp_adc/esp32s3/include -I/media/wish/Disk/esp/esp-idf/components/esp_adc/deprecated/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -Os -freorder-blocks -fmacro-prefix-map=/media/wish/Disk/esp/camera_example=. -fmacro-prefix-map=/media/wish/Disk/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/BNN/CMakeFiles/__idf_BNN.dir/Conv2d.c.obj -MF esp-idf/BNN/CMakeFiles/__idf_BNN.dir/Conv2d.c.obj.d -o esp-idf/BNN/CMakeFiles/__idf_BNN.dir/Conv2d.c.obj -c /media/wish/Disk/esp/camera_example/components/BNN/Conv2d.c
/media/wish/Disk/esp/camera_example/components/BNN/Conv2d.c:47:23: error: 'xnor_in' defined but not used [-Werror=unused-const-variable=]
   47 | static const uint64_t xnor_in[2] = {0xffffffffffffffff, 0x0000000000000000};
      |                       ^~~~~~~
cc1: some warnings being treated as errors
[5/11] Building C object esp-idf/BNN/CMakeFiles/__idf_BNN.dir/utils.c.obj
/media/wish/Disk/esp/camera_example/components/BNN/utils.c: In function 'Compose_RGB_data':
/media/wish/Disk/esp/camera_example/components/BNN/utils.c:28:51: warning: initialization of 'float (*)[input->dim[2]][input->dim[3]]' from incompatible pointer type 'float *' [-Wincompatible-pointer-types]
   28 |     float (*data)[input->dim[2]][input->dim[3]] = gd.float_buf[1]; //默认为RGB三个通道
      |                                                   ^~
/media/wish/Disk/esp/camera_example/components/BNN/utils.c: In function 'avg_pool':
/media/wish/Disk/esp/camera_example/components/BNN/utils.c:161:78: warning: initialization of 'float (*)[input->dim[1]][(long unsigned int)input->dim[2] / (long unsigned int)size][(long unsigned int)input->dim[3] / (long unsigned int)size]' from incompatible pointer type 'float *' [-Wincompatible-pointer-types]
  161 |     float (*output)[input->dim[1]][input->dim[2]/size][input->dim[3]/size] = gd.float_buf[1];
      |                                                                              ^~
ninja: build stopped: subcommand failed.
